assets/css/_calendar.scss
.event.current {
    --border-width: 3px;

    position: relative;
    border-radius: var(--border-width);

    &::after {
        position: absolute;
        content: "";
        top: 0;
        left: 0;
        z-index: -2;
        width: 100%;
        height: 100%;
        background: linear-gradient(
            60deg,
            hsl(224, 85%, 66%),
            hsl(269, 85%, 66%),
            hsl(314, 85%, 66%),
            hsl(359, 85%, 66%),
            hsl(44, 85%, 66%),
            hsl(89, 85%, 66%),
            hsl(134, 85%, 66%),
            hsl(179, 85%, 66%)
        );
        background-size: 300% 300%;
        background-position: 0 50%;
        border-radius: calc(2 * var(--border-width));
        animation: moveGradient 4s alternate infinite;
    }

    &::before {
        position: absolute;
        content: "";
        top: var(--border-width);
        left: var(--border-width);
        bottom: var(--border-width);
        right: var(--border-width);
        z-index: -1;
        background: #041012;
        background-size: 300% 300%;
        background-position: 0 50%;
        border-radius: calc(2 * var(--border-width));
        animation: moveGradient 4s alternate infinite;
    }
}

@keyframes moveGradient {
    50% {
        background-position: 100% 50%;
    }
}

#main-wrapper.calendar-wrapper {
    max-width: 95%;
}

.calendar {
    .month_wrapper {
        margin-bottom: 1rem;
    }

    .month_header {
        position: sticky;
        top: 100px;
        background: $base-color;
        z-index: 5;
        padding: 1rem 0;
        font-family: $font-family-brand;
        font-size: 2rem;

        .year,
        .month {
            font-weight: bold;
            color: grey;
        }

        .year {
            float: right;
            font-size: 2.5rem;
        }
    }

    .day {
        min-width: 0;
        margin-top: 1rem;
        padding: 0.4rem 0;
        border-top: 2px solid rgba(89, 89, 89, 0.44);

        &.current {
            border-color: $link-color;

            .day_title {
                color: $link-color;
            }
        }

        &[data-empty]:not(.current) {
            display: none;
        }

        .day_title {
            padding: 0.2rem 1rem;

            .weekday {
                text-transform: uppercase;
                font-size: 1rem;
                font-family: $font-family-brand;
                position: relative;
                top: -0.75rem;
                left: 0.2rem;
            }

            .monthday {
                font-size: 2rem;
                line-height: 2rem;
            }
        }

        .event {
            display: block;
            background-color: rgba(0, 0, 0, 0.5);
            padding: 0.8rem 1rem;
            border-radius: 0.3rem;
            font-size: 0.9rem;
            margin-top: 0.5em;
            word-break: break-word;
            hyphens: auto;

            .time {
                line-height: 1.8;
                font-family: $font-family-brand;
                font-size: 0.8rem;
            }

            .location {
                margin: 1em 0;
                width: max-content;
                color: $link-color;
                background-color: $base-color;
                display: none;
                font-size: 0.8rem;
                padding: 0 0.3rem;
                border-radius: 0.2rem;
                justify-self: flex-start;
                align-self: center;
            }

            .description {
                display: none;
                font-size: 0.8rem;
                padding-right: 2rem;
            }

            &.current {
                background: transparent;

                .title {
                    font-weight: bold;
                }
            }

            cursor: pointer;

            color: inherit;
            &:hover {
                color: $link-color;
            }
        }
    }

    .day-empty {
        display: none;
    }

    // start the days of the week in same day column every month
    .day-2:first-child {
        grid-column: 2;
    }

    .day-3:first-child {
        grid-column: 3;
    }

    .day-4:first-child {
        grid-column: 4;
    }

    .day-5:first-child {
        grid-column: 5;
    }

    .day-6:first-child {
        grid-column: 6;
    }

    .day-7:first-child {
        grid-column: 7;
    }
}

.calendar_header {
    display: flex;
    align-items: baseline;
    justify-content: space-between;
}

.event_modal {
    width: 80%;
    max-height: 80vh;

    border-radius: 0.6rem;
    background-color: $link-color;
    color: #000;
    margin: 10% auto 5%;
    padding: 20px;

    &::backdrop {
        background-color: rgba(0, 0, 0, 0.4);
        backdrop-filter: blur(5px);
    }

    .close {
        color: #000;
        float: right;
        font-size: 28px;
        font-weight: bold;
        background: transparent;
        border: none;
        width: 40px;
        height: 40px;
        border-radius: 5px;
    }

    .close:hover {
        color: $main-color;
        cursor: pointer;
    }

    #info_title {
        font-size: 2rem;
        line-height: 2rem;
        font-weight: bold;
        background: $link-color;
        padding-top: 0.2vw;

        a {
            color: inherit;
            &:hover {
                text-decoration: underline;
            }
        }
    }

    #info_description {
        padding: 1rem 0;
        font-size: 1rem;

        a {
            color: #000;
        }
    }

    #info_date_time {
        font-weight: bold;
    }

    #info_location {
        margin: 0.5rem 0;
    }
}

@media (min-width: 830px) {
    .calendar {
        .days_wrapper {
            display: grid;
            grid-template-columns: repeat(7, 1fr);
            grid-gap: 0.5rem;
        }

        .day {
            &[data-empty]:not(.current) {
                display: block;
            }
        }

        .day-empty {
            display: block;
        }
    }
}

